--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.idea
 
 # Runtime data
 pids
@@ -57,4 +58,5 @@ typings/
 # dotenv environment variables file
 .env
 
-dist
+# For use repo as package
+#dist
