--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "liquor-tree",
   "description": "A Vue.js tree component.",
-  "version": "0.2.53",
+  "version": "0.2.54",
   "author": "Kostiantyn <phlyze@gmail.com>",
   "library": "LiquorTree",
   "homepage": "https://amsik.github.io/liquor-tree/",
   "scripts": {
     "dev": "cross-env NODE_ENV=development rollup -w -c rollup.config.js",
     "build": "cross-env NODE_ENV=production rollup -c rollup.config.js",
+    "build:watch": "cross-env NODE_ENV=production rollup -w -c rollup.config.js",
     "lint": "eslint --fix src test",
     "test": "npm run lint && npm run unit",
     "unit": "jest",
